fix collapse menu

--- a/ClientUI/src/app/_core/header/header.component.css
+++ b/ClientUI/src/app/_core/header/header.component.css
@@ -9,3 +9,7 @@
 .stroke-thinner {
     stroke-width: 0.8;
 }
+
+.bg-app {
+    background-color: var(--background-color);
+}
